--- a/package.json
+++ b/package.json
@@ -7,11 +7,30 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "moment": "^2.29.4",
+    "nanoid": "^4.0.2",
+    "normalize.css": "^8.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-moment": "^1.1.3",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.10",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.3"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-recommended",
+    "rules": {
+      "at-rule-no-unknown": [
+        true,
+        {
+          "ignoreAtRules": [
+            "import-normalise"
+          ]
+        }
+      ]
+    }
   },
   "scripts": {
     "start": "react-scripts start",
